AC_INIT

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE(conntrack, 1.00beta2)

AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_LN_S

case $target in
*-*-linux*) ;;
*) AC_MSG_ERROR([Linux only, dude!]);;
esac

dnl Dependencies
LIBNFCONNTRACK_REQUIRED=0.0.31
 
AC_CHECK_LIB(dl, dlopen)

PKG_CHECK_MODULES(LIBNFCONNTRACK, libnetfilter_conntrack >= $LIBNFCONNTRACK_REQUIRED,,
	AC_MSG_ERROR(Cannot find libnetfilter_conntrack >= $LIBNFCONNTRACK_REQUIRED))
 
AC_CHECK_HEADERS(arpa/inet.h)
dnl check for inet_pton
AC_CHECK_FUNCS(inet_pton)
dnl Some systems have it, but not IPv6
if test "$ac_cv_func_inet_pton" = "yes" ; then
AC_MSG_CHECKING(if inet_pton supports IPv6)
AC_TRY_RUN(
   [
#ifdef HAVE_SYS_TYPES_H
#include <sys/types.h>
#endif
#ifdef HAVE_SYS_SOCKET_H
#include <sys/socket.h>
#endif
#ifdef HAVE_NETINET_IN_H
#include <netinet/in.h>
#endif
#ifdef HAVE_ARPA_INET_H
#include <arpa/inet.h>
#endif
int main()
  {
     struct in6_addr addr6;
     if (inet_pton(AF_INET6, "::1", &addr6) < 1)
        exit(1);
     else
        exit(0);
  }
  ], [ AC_MSG_RESULT(yes)
       AC_DEFINE_UNQUOTED(HAVE_INET_PTON_IPV6, 1, [Define to 1 if inet_pton supports IPv6.])
  ], AC_MSG_RESULT(no), AC_MSG_RESULT(no))
fi

dnl--------------------------------

if test ! -z "$libdir"; then
   MODULE_DIR="\\\"$libdir/conntrack/\\\""
   CFLAGS="$CFLAGS -DCONNTRACK_LIB_DIR=$MODULE_DIR"
fi

dnl--------------------------------

CFLAGS="$CFLAGS $LIBNFCONNTRACK_CFLAGS"
CONNTRACK_LIBS="$LIBNFCONNTRACK_LIBS"

AC_SUBST(CONNTRACK_LIBS)

AC_OUTPUT(Makefile src/Makefile extensions/Makefile include/Makefile)
