include $(top_srcdir)/Make_global.am

noinst_LTLIBRARIES = libct_proto_tcp.la libct_proto_udp.la \
		     libct_proto_icmp.la libct_proto_icmpv6.la \
		     libct_proto_unknown.la libct_proto_udplite.la

libct_proto_tcp_la_SOURCES = libct_proto_tcp.c
libct_proto_udp_la_SOURCES = libct_proto_udp.c
libct_proto_udplite_la_SOURCES = libct_proto_udplite.c
libct_proto_icmp_la_SOURCES = libct_proto_icmp.c
libct_proto_icmpv6_la_SOURCES = libct_proto_icmpv6.c
libct_proto_unknown_la_SOURCES = libct_proto_unknown.c
